test/expressions/diten/typedottype.chpl
writeln(int.type:string);
writeln(3.14.type.type:string);
